# kv

./: .clang-tidy  AGENTS.md  CMakeLists.txt  README.md  check_unicode_hygiene.py  devenv.nix  devenv.yaml  docs.md  model.md  pyproject.toml
.codex/skills/kv-contracts/: SKILL.md
.codex/skills/kv-cpp/: SKILL.md
.codex/skills/kv-general/: SKILL.md
.codex/skills/kv-workflows/: SKILL.md
.forgejo/workflows/: ci.yml
benchmark/: CMakeLists.txt  kv_bench.cpp
devenv/: lock_validation.nix
include/kv/: kv.hpp  version.hpp
src/: main.cpp
src/kv/: kv.cpp
test/: CMakeLists.txt  collapse_perf_script.pl  kv_test.cpp  version_test.cpp
